<resources>
    <string name="app_name">ContactApp</string>
    <string name="txt_image_description">Contact´s avatar</string>
    <string name="txt_icon_description">Icon\'s description</string>
    <string name="txt_mobile">Mobile</string>
    <string name="txt_mobile_number">+52 861&#8211;116&#8211;76&#8211;60</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_phone_number">+52 (861) 612&#8211;5404</string>
    <string name="txt_email">Email</string>
    <string name="txt_email_address">saul_99_27@hotmail.com</string>
    <string name="txt_name">Héctor Saúl Maldonado Gómez</string>
    <string name="txt_age">Age</string>
    <string name="txt_age_contact">22</string>
    <string name="txt_gender_contact">Male</string>
    <string name="txt_gender">Genre</string>
    <string name="txt_street">Street</string>
    <string name="txt_address">Address</string>
    <string name="txt_intNumber">Interior Number</string>
    <string name="txt_extNumber">Exterior Number</string>
    <string name="txt_suburb">Suburb</string>
    <string name="txt_city">City</string>
    <string name="txt_state">State</string>
    <string name="txt_country">Country</string>
    <string name="txt_zip_code">Zip Code</string>
    <string name="title_toolbar">Contact</string>
    <string name="txt_save_address">Save address</string>
    <string name="txt_change_background">Change color</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_color">Color (Hex)</string>
    <string name="txt_error_change_background">The background couldn\'t be changed, try a valid color</string>
    <string name="txt_reset_background">Reset background</string>
    <string name="txt_no_image_selected">No image selected</string>
    <string name="txt_new_contact">New contact</string>
    <string name="txt_name_sub">Name</string>
    <string name="txt_add">Add</string>
    <string name="txt_total_contacts">Total contacts: %1$s</string>
</resources>